[tool.poetry]
name = "reinforcementlearning-dqn"
version = "0.1.0"
description = ""
authors = ["Luis-FO <luisfernandophsc@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
gym = "^0.26.2"
gymnasium = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
